# CalcEngine

./: .gitignore  CMakeLists.txt  CalcEngine.sln
CalcEngine/: CMakeLists.txt  CalcEngine.rc  CalcEngine.vcxproj  CalcEngine.vcxproj.filters  binary_operators.cpp  binary_operators.h  calc_manager.cpp  calc_manager.h  calc_object.h  cell_detail.cpp  cell_detail.h  cell_node.cpp  cell_node.h  excel_function_node.cpp  excel_function_node.h  excel_functions_enum.h  formula_detail.cpp  formula_detail.h  function_node.cpp  function_node.h  helpers.h  io_manager.cpp  io_manager.h  node.cpp  node.h  number_node.cpp  number_node.h  reader_csv.cpp  reader_csv.h  reference.cpp  reference.h  reference_node.cpp  reference_node.h
CalcEngine.Console/: CMakeLists.txt  CalcEngine.Console.cpp  CalcEngine.Console.vcxproj  CalcEngine.Console.vcxproj.filters
CalcEngine.Lambda/: CMakeLists.txt  main.cpp
CalcEngine.Tests/: Basic1-Old.json  Basic1.json  CalcEngine.Tests.vcxproj  CalcEngine.Tests.vcxproj.filters  EPDataTypes.csv  EPValues.csv  TestFile.json  test.cpp
CalcEngine/logging/: console_log.cpp  console_log.h  log_level.h  logger_interface.h
ExcelParser/: ExcelParser.csproj  Program.cs
ExcelParser.Console/: Basic1.xlsx  ExcelParser.Console.csproj  Options.cs  Program.cs  testing.json  testing1.json
ExcelParser.Tests/: ExcelParser.Tests.csproj  UnitTest1.cs
ExcelParser.Tests/TestFiles/: SharedCellsTesting.xlsx  SharedCellsTestingShort.xlsx
Scripts/: deploy-calcengine-lambda.sh
Web.API/: .env.template  debug.py  output.json  package-lock.json  package.json
Web.Client/: README.md  Web.Client.njsproj  buildspec.yml  package-lock.json  package.json
(+35 files in other folders)
